[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/AutoSplitContainer/ExampleScript.gd" type="Script" id=1]
[ext_resource path="res://UI/AutoSplitContainer/scripts/AutoSplitContainer.gd" type="Script" id=2]

[node name="Example" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarkerLabel" type="Label" parent="."]
unique_name_in_owner = true
text = "PERCENT"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="MarkerLabel"]
show_behind_parent = true
margin_top = -48.0
margin_right = 3.0
margin_bottom = 61.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Split" type="HSplitContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Blue" type="ColorRect" parent="VBoxContainer/Split"]
unique_name_in_owner = true
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.117647, 0.12549, 0.227451, 0.431373 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Split/Blue"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BlueLabel" type="Label" parent="VBoxContainer/Split/Blue/CenterContainer"]
unique_name_in_owner = true
margin_left = 239.0
margin_top = 293.0
margin_right = 266.0
margin_bottom = 307.0
text = "SIZE"

[node name="Red" type="ColorRect" parent="VBoxContainer/Split"]
unique_name_in_owner = true
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.407843, 0, 0, 0.439216 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Split/Red"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RedLabel" type="Label" parent="VBoxContainer/Split/Red/CenterContainer"]
unique_name_in_owner = true
margin_left = 239.0
margin_top = 293.0
margin_right = 266.0
margin_bottom = 307.0
text = "SIZE"
